--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,12 @@
-<h1>My tasks</h1>
-<ul>
-  <% @tasks.each do |task| %>
-    <li><%= link_to task.title, task_path(task) %></li>
-  <% end %>
-</ul>
+<div class="container m-3">
+  <h1>My tasks</h1>
+  <div class="card" style="width: 18rem;">
+    <ul class="list-group">
+      <% @tasks.each do |task| %>
+        <li class="list-group-item"><%= link_to task.title, task_path(task) %></li>
+      <% end %>
+    </ul>
+  </div>
 
-<%= link_to "+ Add a new task", new_task_path %>
+  <%= link_to "+ Add a new task", new_task_path %>
+</div>
